tweetFacade.getUserTweets fix to view tweet attachments images